# backend.pothole-patrol

./: .gitignore  README.md  pyproject.toml
core/: admin.py  api.py  models.py  schemas.py  utils.py  validators.py
core/migrations/: 0001_initial.py  0002_alter_potholereport_region.py  0003_user_delete_otplog_userprofile_id_document_and_more.py  0004_alter_redemptionrequest_reference_alter_user_groups_and_more.py
mainProj/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
mainProj/settings/: __init__.py  base.py  dev.py  logging.py
tests/: client.py  test_auth.py  test_reports.py  test_rewards.py
